--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,18 @@
 .side-menu-item.active {
     @apply bg-gray-800 text-white;
 }
+.toggle-input:checked ~ .dot {
+    @apply transform translate-x-full bg-blue-500;
+}
+.btn-img-input {
+    @apply flex flex-col items-center py-6 px-3;
+}
+.btn-img-input.has-image {
+    @apply flex-row justify-center py-4 text-white bg-blue-500;
+}
+.btn-img-input.has-image span {
+    @apply ml-2;
+}
+.btn-img-input.has-image svg {
+    @apply text-white;
+}
